--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     color: #D00070;
     /*background-color: #000000;
     color: #aaff00;*/
-    padding: 10%;
+    padding: 10pc;
 }
 
 nav {
