Changes to font face

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    font-size: medium;
     font-family: "Chakra Petch";
     /* font-family: 'Courier New', Courier, monospace; */
     background-color: #bbd1ff;
