--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-size: medium;
+    font-size: larger;
     font-family: "Chakra Petch";
     /* font-family: 'Courier New', Courier, monospace; */
     background-color: #bbd1ff;
