--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@
 
 body {
     font-size: larger;
-    font-family: "Saira";
+    font-family: "Chakra Petch";
     /* font-family: 'Courier New', Courier, monospace; */
     background-color: #bbd1ff;
     color: #D00070;
