--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Libre Franklin";
-    src: url("/css/fonts/Libre_Franklin/LibreFranklin-VariableFont_wght.ttf");
+    src: url(/css/fonts/Libre_Franklin/LibreFranklin-VariableFont_wght.ttf);
 }
 
 @font-face {
@@ -35,7 +35,7 @@
 
 body {
     font-size: larger;
-    font-family: "Chakra Petch";
+    font-family: "Saira";
     /* font-family: 'Courier New', Courier, monospace; */
     background-color: #bbd1ff;
     color: #D00070;
